--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "habr-search-front",
+  "name": "search-ui",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "Igor Tulmentyev <igtulm@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev":
+      "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "build": "node build/build.js"
   },
@@ -56,9 +57,5 @@
     "node": ">= 6.0.0",
     "npm": ">= 3.0.0"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+  "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"]
 }
