--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "author": "Igor Tulmentyev <igtulm@gmail.com>",
   "private": true,
   "scripts": {
-    "dev":
-      "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "humps": "^2.0.1",
+    "keymirror": "^0.1.1",
     "lodash": "^4.17.5",
+    "url-join": "^4.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-toast": "^0.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -57,5 +61,9 @@
     "node": ">= 6.0.0",
     "npm": ">= 3.0.0"
   },
-  "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"]
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
