--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "author": "Igor Tulmentyev <igtulm@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev":
+      "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "deploy": "scp -r ./dist/* root@reindexer.org:habrdemo-static"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -61,9 +63,5 @@
     "node": ">= 6.0.0",
     "npm": ">= 3.0.0"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+  "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"]
 }
