--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap-vue": "^2.0.0-rc.6",
     "humps": "^2.0.1",
     "keymirror": "^0.1.1",
     "lodash": "^4.17.5",
+    "normalize.css": "^8.0.0",
     "url-join": "^4.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
