--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "author": "Igor Tulmentyev <igtulm@gmail.com>",
   "private": true,
   "scripts": {
-    "dev":
-      "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "build": "node build/build.js",
     "deploy": "scp -r ./dist/* root@reindexer.org:habrdemo-static"
@@ -15,11 +14,14 @@
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.6",
     "humps": "^2.0.1",
+    "install": "^0.11.0",
     "keymirror": "^0.1.1",
     "lodash": "^4.17.5",
+    "moment": "^2.22.1",
     "normalize.css": "^8.0.0",
     "url-join": "^4.0.0",
     "vue": "^2.5.2",
+    "vue-octicon": "^2.1.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "vuex-toast": "^0.1.3"
@@ -65,5 +67,9 @@
     "node": ">= 6.0.0",
     "npm": ">= 3.0.0"
   },
-  "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"]
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
